# SoulBoard

./: .gitignore  Cargo.toml  README.md  TUTO.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yaml
exports/: ingame.html
src/: app.rs  bridge.rs  main.rs  model.rs  storage.rs
src/app/: palette.rs  styles.rs  teams.rs  ui.rs
