[package]
name = "soulboard"
version = "1.1.0"
edition = "2024"
description = "Small overlay manager for Splatoon competitive broadcasting"
license = "EUPL-1.2"
readme = "README.md"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
catppuccin = { version = "2", features = ["iced"] }
iced = { version = "0.13", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp", "ico", "tiff"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "sync",
] }

[profile.dev]
opt-level = 1
